<resources>
    <string name="app_name">ChineseFoodRecipesFinal</string>

    <string name="person">Профиль</string>
    <string name="home">Домой</string>
    <string name="recipes">Рецепты</string>
    <string name="search">Поиск</string>
    <string name="favourite">Избранное</string>

    <string name="sup">Пельмени и супы</string>
    <string name="meat_section_label">Блюда из мяса</string>

    <string name="title">Суп с тофу и говядиной</string>
    <string name="recipe_day_label">Рецепт дня</string>
    <string name="ingridients">3 луковицы</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shopping">Корзина</string>
    <string name="profile">Профиль</string>
    <string name="fio">Фамилия Имя</string>
    <string name="email">mail</string>
</resources>