<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:title="@string/home"
        android:icon="@drawable/ic_home" />

    <item
        android:id="@+id/searchFragment"
        android:title="@string/shopping"
        android:icon="@drawable/ic_cart" />

    <item
        android:id="@+id/recipesFragment"
        android:title="@string/recipes"
        android:icon="@drawable/ic_svoi_ricepts" />

    <item
        android:id="@+id/favoritesFragment"
        android:title="@string/favourite"
        android:icon="@drawable/ic_favorite" />

    <item
        android:id="@+id/profileFragment"
        android:title="@string/person"
        android:icon="@drawable/ic_profile" />

</menu>